src/Skia/Bindings/Sk_canvas.hs


@
void sk_canvas_draw_arc(sk_canvas_t *ccanvas, const sk_rect_t *oval, float startAngle, float sweepAngle, _Bool useCenter, const sk_paint_t *paint)
@
-}
foreign import ccall "sk_canvas_draw_arc" sk_canvas_draw_arc ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * oval"@
  -> CFloat -- ^ C argument @"float startAngle"@
  -> CFloat -- ^ C argument @"float sweepAngle"@
  -> CBool -- ^ C argument @"_Bool useCenter"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * paint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_arc'
foreign import ccall "&sk_canvas_draw_arc" p'sk_canvas_draw_arc ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_rect) -> CFloat -> CFloat -> CBool -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_drrect(sk_canvas_t *ccanvas, const sk_rrect_t *outer, const sk_rrect_t *inner, const sk_paint_t *paint)
@
-}
foreign import ccall "sk_canvas_draw_drrect" sk_canvas_draw_drrect ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_rrect) -- ^ C argument @"const sk_rrect_t * outer"@
  -> Ptr (Sk_rrect) -- ^ C argument @"const sk_rrect_t * inner"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * paint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_drrect'
foreign import ccall "&sk_canvas_draw_drrect" p'sk_canvas_draw_drrect ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_rrect) -> Ptr (Sk_rrect) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_atlas(sk_canvas_t *ccanvas, const sk_image_t *atlas, const sk_rsxform_t *xform, const sk_rect_t *tex, const sk_color_t *colors, int count, sk_blendmode_t mode, const sk_sampling_options_t *sampling, const sk_rect_t *cullRect, const sk_paint_t *paint)
@
-}
foreign import ccall "sk_canvas_draw_atlas" sk_canvas_draw_atlas ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_image) -- ^ C argument @"const sk_image_t * atlas"@
  -> Ptr (Sk_rsxform) -- ^ C argument @"const sk_rsxform_t * xform"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * tex"@
  -> Ptr (Sk_color) -- ^ C argument @"const sk_color_t * colors"@
  -> CInt -- ^ C argument @"int count"@
  -> Sk_blendmode -- ^ C argument @"sk_blendmode_t mode"@
  -> Ptr (Sk_sampling_options) -- ^ C argument @"const sk_sampling_options_t * sampling"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cullRect"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * paint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_atlas'
foreign import ccall "&sk_canvas_draw_atlas" p'sk_canvas_draw_atlas ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_image) -> Ptr (Sk_rsxform) -> Ptr (Sk_rect) -> Ptr (Sk_color) -> CInt -> Sk_blendmode -> Ptr (Sk_sampling_options) -> Ptr (Sk_rect) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_patch(sk_canvas_t *ccanvas, const sk_point_t *cubics, const sk_color_t *colors, const sk_point_t *texCoords, sk_blendmode_t mode, const sk_paint_t *paint)
@
-}
foreign import ccall "sk_canvas_draw_patch" sk_canvas_draw_patch ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_point) -- ^ C argument @"const sk_point_t * cubics"@
  -> Ptr (Sk_color) -- ^ C argument @"const sk_color_t * colors"@
  -> Ptr (Sk_point) -- ^ C argument @"const sk_point_t * texCoords"@
  -> Sk_blendmode -- ^ C argument @"sk_blendmode_t mode"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * paint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_patch'
foreign import ccall "&sk_canvas_draw_patch" p'sk_canvas_draw_patch ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_point) -> Ptr (Sk_color) -> Ptr (Sk_point) -> Sk_blendmode -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
_Bool sk_canvas_is_clip_empty(sk_canvas_t *ccanvas)
@
-}
foreign import ccall "sk_canvas_is_clip_empty" sk_canvas_is_clip_empty ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_canvas_is_clip_empty'
foreign import ccall "&sk_canvas_is_clip_empty" p'sk_canvas_is_clip_empty ::
  FunPtr (Ptr (Sk_canvas) -> IO (CBool))

{- | C function signature:

@
_Bool sk_canvas_is_clip_rect(sk_canvas_t *ccanvas)
@
-}
foreign import ccall "sk_canvas_is_clip_rect" sk_canvas_is_clip_rect ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_canvas_is_clip_rect'
foreign import ccall "&sk_canvas_is_clip_rect" p'sk_canvas_is_clip_rect ::
  FunPtr (Ptr (Sk_canvas) -> IO (CBool))

{- | C function signature:

@
sk_nodraw_canvas_t *sk_nodraw_canvas_new(int width, int height)
@
-}
foreign import ccall "sk_nodraw_canvas_new" sk_nodraw_canvas_new ::
  CInt -- ^ C argument @"int width"@
  -> CInt -- ^ C argument @"int height"@
  -> IO (Ptr (Sk_nodraw_canvas)) -- ^ C return type: @"sk_nodraw_canvas_t *"@

-- | Function pointer to 'sk_nodraw_canvas_new'
foreign import ccall "&sk_nodraw_canvas_new" p'sk_nodraw_canvas_new ::
  FunPtr (CInt -> CInt -> IO (Ptr (Sk_nodraw_canvas)))

{- | C function signature:

@
void sk_nodraw_canvas_destroy(sk_nodraw_canvas_t *t)
@
-}
foreign import ccall "sk_nodraw_canvas_destroy" sk_nodraw_canvas_destroy ::
  Ptr (Sk_nodraw_canvas) -- ^ C argument @"sk_nodraw_canvas_t * t"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_nodraw_canvas_destroy'
foreign import ccall "&sk_nodraw_canvas_destroy" p'sk_nodraw_canvas_destroy ::
  FunPtr (Ptr (Sk_nodraw_canvas) -> IO (()))

{- | C function signature:

@
sk_nway_canvas_t *sk_nway_canvas_new(int width, int height)
@
-}
foreign import ccall "sk_nway_canvas_new" sk_nway_canvas_new ::
  CInt -- ^ C argument @"int width"@
  -> CInt -- ^ C argument @"int height"@
  -> IO (Ptr (Sk_nway_canvas)) -- ^ C return type: @"sk_nway_canvas_t *"@

-- | Function pointer to 'sk_nway_canvas_new'
foreign import ccall "&sk_nway_canvas_new" p'sk_nway_canvas_new ::
  FunPtr (CInt -> CInt -> IO (Ptr (Sk_nway_canvas)))

{- | C function signature:

@
void sk_nway_canvas_destroy(sk_nway_canvas_t *t)
@
-}
foreign import ccall "sk_nway_canvas_destroy" sk_nway_canvas_destroy ::
  Ptr (Sk_nway_canvas) -- ^ C argument @"sk_nway_canvas_t * t"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_nway_canvas_destroy'
foreign import ccall "&sk_nway_canvas_destroy" p'sk_nway_canvas_destroy ::
  FunPtr (Ptr (Sk_nway_canvas) -> IO (()))

{- | C function signature:

@
void sk_nway_canvas_add_canvas(sk_nway_canvas_t *t, sk_canvas_t *canvas)
@
-}
foreign import ccall "sk_nway_canvas_add_canvas" sk_nway_canvas_add_canvas ::
  Ptr (Sk_nway_canvas) -- ^ C argument @"sk_nway_canvas_t * t"@
  -> Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * canvas"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_nway_canvas_add_canvas'
foreign import ccall "&sk_nway_canvas_add_canvas" p'sk_nway_canvas_add_canvas ::
  FunPtr (Ptr (Sk_nway_canvas) -> Ptr (Sk_canvas) -> IO (()))

{- | C function signature:

@
void sk_nway_canvas_remove_canvas(sk_nway_canvas_t *t, sk_canvas_t *canvas)
@
-}
foreign import ccall "sk_nway_canvas_remove_canvas" sk_nway_canvas_remove_canvas ::
  Ptr (Sk_nway_canvas) -- ^ C argument @"sk_nway_canvas_t * t"@
  -> Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * canvas"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_nway_canvas_remove_canvas'
foreign import ccall "&sk_nway_canvas_remove_canvas" p'sk_nway_canvas_remove_canvas ::
  FunPtr (Ptr (Sk_nway_canvas) -> Ptr (Sk_canvas) -> IO (()))

{- | C function signature:

@
void sk_nway_canvas_remove_all(sk_nway_canvas_t *t)
@
-}
foreign import ccall "sk_nway_canvas_remove_all" sk_nway_canvas_remove_all ::
  Ptr (Sk_nway_canvas) -- ^ C argument @"sk_nway_canvas_t * t"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_nway_canvas_remove_all'
foreign import ccall "&sk_nway_canvas_remove_all" p'sk_nway_canvas_remove_all ::
  FunPtr (Ptr (Sk_nway_canvas) -> IO (()))

{- | C function signature:

@
sk_overdraw_canvas_t *sk_overdraw_canvas_new(sk_canvas_t *canvas)
@
-}
foreign import ccall "sk_overdraw_canvas_new" sk_overdraw_canvas_new ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * canvas"@
  -> IO (Ptr (Sk_overdraw_canvas)) -- ^ C return type: @"sk_overdraw_canvas_t *"@

-- | Function pointer to 'sk_overdraw_canvas_new'
foreign import ccall "&sk_overdraw_canvas_new" p'sk_overdraw_canvas_new ::
  FunPtr (Ptr (Sk_canvas) -> IO (Ptr (Sk_overdraw_canvas)))

{- | C function signature:

@
void sk_overdraw_canvas_destroy(sk_overdraw_canvas_t *canvas)
@
-}
foreign import ccall "sk_overdraw_canvas_destroy" sk_overdraw_canvas_destroy ::
  Ptr (Sk_overdraw_canvas) -- ^ C argument @"sk_overdraw_canvas_t * canvas"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_overdraw_canvas_destroy'
foreign import ccall "&sk_overdraw_canvas_destroy" p'sk_overdraw_canvas_destroy ::
  FunPtr (Ptr (Sk_overdraw_canvas) -> IO (()))

{- | C function signature:

@
gr_recording_context_t *sk_get_recording_context(sk_canvas_t *canvas)
@
-}
foreign import ccall "sk_get_recording_context" sk_get_recording_context ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * canvas"@
  -> IO (Ptr (Gr_recording_context)) -- ^ C return type: @"gr_recording_context_t *"@

-- | Function pointer to 'sk_get_recording_context'
foreign import ccall "&sk_get_recording_context" p'sk_get_recording_context ::
  FunPtr (Ptr (Sk_canvas) -> IO (Ptr (Gr_recording_context)))

{- | C function signature:

@
sk_surface_t *sk_get_surface(sk_canvas_t *canvas)
@
-}
foreign import ccall "sk_get_surface" sk_get_surface ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * canvas"@
  -> IO (Ptr (Sk_surface)) -- ^ C return type: @"sk_surface_t *"@

-- | Function pointer to 'sk_get_surface'
foreign import ccall "&sk_get_surface" p'sk_get_surface ::
  FunPtr (Ptr (Sk_canvas) -> IO (Ptr (Sk_surface)))
